--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2"
   },
